# jmm_diversity

./: MANIFEST.in  README.md  pyproject.toml
src/langdive/: corpus_processing.py  langdive.py  polyglot_tokenizer.py
src/langdive/data/isomappings/: biblecorpus100-processed.10000.csv  mbertwiki-processed.10000.csv  teddi500.csv  tydiqa-processed.10000.csv  xcopa-processed.10000.csv  xglue-processed.10000.csv  xnli-processed.10000.csv  xquad-processed.10000.csv  xtreme-processed.10000.csv
