[build-system]
requires = ["setuptools>=72.1.0"]
build-backend = "setuptools.build_meta"

[tool.setuptools]
package-dir = {"" = "src"}
include-package-data = true

[tool.setuptools.packages.find]
where = ["src"]

[project]
name = "langdive_test"
version = "0.0.15"
authors = [
  { name="Example Author", email="author@example.com" },
]
description = "A small example package"
readme = "README.md"
requires-python = ">=3.10"
classifiers = [
    "Programming Language :: Python :: 3",
    "Operating System :: OS Independent",
    'License :: OSI Approved :: GNU General Public License v3 or later (GPLv3+)',
    'Development Status :: 3 - Alpha'
]
dependencies = [
    'setuptools>=72.1.0',
    'scipy>=1.14.0',
    'lang2vec>=1.1.2',
    'PyICU>=2.13',
    'pandas>=2.2.2',
    'seaborn>=0.13.2',
    'segments>=2.2.1',
    'six>=1.16.0',
]

[project.urls]
Homepage = "https://github.com/MorphDiv/jmm_diversity"


